--- a/style.css
+++ b/style.css
@@ -4,52 +4,39 @@ body {
 }
 
 .heading {
-    font-size: 23px;
+    font-size: 25px;
     width: 100%;
     margin: 0px;
 }
 
-.note {
-    font-size: 15px;
-    color: black;
-}
 
-.div_volume {
-    float: right;
-}
-
-.div_volume_img {
-    width: 200px;
-    border-radius: 100px;
-}
-
-#volume {
+#song_name {
     font-size: 23px;
-    margin: 15px;
 }
 
-.div_speed {
-    float: left;
+canvas 
+  {
+    border:5px solid white;
+    border-radius:20px;
+    box-shadow:5px 5px 5px grey;
+    box-shadow: 1px 1px 38px #ffffff;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+@keyframes example {
+
+  from {box-shadow: 1px 1px 38px grey;}
+  to {box-shadow: 1px 1px 38px white;}
+
 }
 
-.div_speed_img {
-    width: 200px;
-    border-radius: 100px;
-}
-
-#speed {
-    font-size: 23px;
-    margin: 15px;
-}
-
-.play_button
-{
-    width: 130px;
-    font-size: 25px;
-}
-
-canvas
-{
-    border: 5px solid white;
-    border-radius: 20px;
-}
+.copy_right_footer {
+    position: fixed;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    line-height: 3;
+    text-align: center;
+  }
